<resources>
    <string name="app_name">Plan Ahead</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_settings">Settings</string>

    <string name="not_implemented">Not implemented yet!</string>
    <string name="nav_to_do_list">To do</string>

    <string name="year">"Year "</string>
    <string name="month">"Month "</string>
    <string name="nav_my_schedule">My schedule</string>
    <string name="nav_routines">Routines</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_about">About</string>
    <string name="nav_group_customize">Customization</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="nav_group_other">Other</string>
    <string name="dialog_title_about">About</string>
    <string name="dialog_message_about">This is an app that helps you organize your schedule more efficiently.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="event_name">Event name</string>
    <string name="location">Location</string>
    <string name="start_hour">Start hour</string>
    <string name="end_hour">End hour</string>

</resources>
