<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/eventNameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/event_name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/eventNameBox"
                android:text="Remind at:" />

            <Button
                android:id="@+id/spinnerStartDate"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/dateCheckBox"
                android:layout_alignStart="@+id/spinnerStartHour"
                android:layout_alignTop="@+id/dateCheckBox"
                android:visibility="gone"/>

            <Button
                android:id="@+id/spinnerStartHour"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_below="@+id/eventNameBox"
                android:layout_toEndOf="@+id/weeklyCheckBox"
                android:layout_toRightOf="@+id/weeklyCheckBox" />
            <CheckBox
                android:id="@+id/dateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinnerStartHour"
                android:layout_marginTop="20dp"
                android:text="Date" />

            <CheckBox
                android:id="@+id/dailyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dateCheckBox"
                android:layout_marginTop="14dp"
                android:text="Every day" />

            <CheckBox
                android:id="@+id/weeklyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/dailyCheckBox"
                android:layout_marginTop="13dp"
                android:text="Every week" />

            <LinearLayout
                android:id="@+id/daysCheckboxes"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/weeklyCheckBox"
                android:layout_marginLeft="50dp"
                android:visibility="gone"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/mondayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/daysCheckboxes"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/tuesdayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/wednesdayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <CheckBox
                    android:id="@+id/thursdayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/fridayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/saturdayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

                <CheckBox
                    android:id="@+id/sundayCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />
            </LinearLayout>

            <Button
                android:id="@+id/confirmBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/daysCheckboxes"
                android:layout_marginTop="13dp"
                android:text="Add"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>